--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mui/lab": "^5.0.0-alpha.86",
     "@mui/material": "^5.15.6",
     "@reduxjs/toolkit": "^1.8.1",
+    "@splidejs/react-splide": "^0.7.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -27,7 +28,7 @@
     "redux-logger": "^3.0.6",
     "styled-components": "5.3.5",
     "sweetalert2": "11.4.23",
-    "swiper": "^8.3.1",
+    "swiper": "^11.1.1",
     "typescript": "~4.1.5",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
@@ -41,7 +42,8 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/redux-logger": "^3.0.13",
-    "@types/styled-components": "^5.1.34"
+    "@types/styled-components": "^5.1.34",
+    "@types/swiper": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
