--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-scripts": "5.0.0",
     "redux-logger": "^3.0.6",
     "styled-components": "5.3.5",
-    "sweetalert2": "11.4.23",
+    "sweetalert2": "^11.4.23",
     "swiper": "^11.1.1",
     "typescript": "~4.1.5",
     "universal-cookie": "^4.0.4",
