--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.1.9",
     "react-scripts": "5.0.0",
     "redux-logger": "^3.0.6",
+    "socket.io-client": "^4.7.5",
     "styled-components": "5.3.5",
     "sweetalert2": "^11.4.23",
     "swiper": "^11.1.1",
@@ -42,6 +43,7 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "@types/redux-logger": "^3.0.13",
+    "@types/socket.io-client": "^3.0.0",
     "@types/styled-components": "^5.1.34",
     "@types/swiper": "^6.0.0"
   },
